...
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".activities.UserProfileActivity">

  <EditText
    android:id="@+id/UserProfileETUsername"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="144dp"
    android:ems="10"
    android:hint="Username"
    android:inputType="textPersonName"
...
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/UserProfileETPhoneNumber" />

  <Button
    android:id="@+id/UserProfileSaveBttn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="95dp"
    android:text="@string/save"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
...
