...
    android:layout_marginTop="4dp"
    android:layout_marginEnd="209dp"
    android:layout_marginBottom="86dp"
    android:text="Sign Up"
    android:textSize="8sp"
    app:layout_constraintBottom_toTopOf="@+id/MainActivityAddASuperPetBttn"
    app:layout_constraintEnd_toStartOf="@+id/MainActivityImageViewUserProfile"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/MainActivityTextViewGreeting"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="84dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />
...
